# traj_mpc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: record_topics.txt
include/traj_mpc/: mpc_controller.h  trajectory_loader.h
launch/: traj_mpc.launch  traj_mpc_with_recording.launch
src/: mpc_controller.cpp  traj_mpc_node.cpp  trajectory_loader.cpp
trajectories/: example_trajectory.xml
