<?xml version="1.0"?>
<package format="2">
  <name>traj_mpc</name>
  <version>0.1.0</version>
  <description>MPC trajectory tracking control package without MAVROS dependencies</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>eigen3</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>eigen3</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>eigen3</exec_depend>
</package>